[package]
name = "aapl-local-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
block = "0.1.6"
_sys = { package = "aapl-local-auth-sys", path = "./aapl-local-auth-sys" }
tokio = { version = "1", features = ["macros", "rt", "sync"], optional = true }

[features]
async = ["tokio"]
default = ["async"]
