[package]
name = "aapl-local-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = "0.1.6"
objc = "0.2.7"
thiserror = "1.0"
tokio = { version = "1", optional = true }
_sys = { package = "aapl-local-auth-sys", path = "./aapl-local-auth-sys" }

[features]
default = ["async"]
async = ["tokio/sync"]
async-full = ["tokio/full"]

[[example]]
name = "sample_async"
required-features = ["async-full"]
